# Projet-IA-2024

./: pyproject.toml
